<resources>
    <string name="app_name">MeetingRoom</string>
    <string name="title_activity_room_status">RoomStatusActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="badoo_mail_suffix">\@corp.badoo.com</string>

    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>

    <string name="hold_to_end">Hold to end</string>
    <string name="do_not_disturb">Do not disturb</string>

    <string name="extend_by_15">Extend by 15</string>

    <string name="available_for_upper_case">AVAILABLE FOR</string>
    <string name="on_hold_for_upper_case">ON HOLD FOR</string>
    <string name="do_not_disturb_upper_case">DO NOT DISTURB</string>
    <string name="busy_until_upper_case">BUSY UNTIL</string>
    <string name="loading">Loading</string>
    <string name="booking">Booking</string>
    <string name="canceling">Canceling</string>
    <string name="today">Today</string>
    <string name="no_slots_selected_alert">Choose your slots</string>
    <string name="book">book</string>
    <string name="fast_booking">Fast booking</string>
    <string name="fake_date">Thursday, 12 Jan</string>
    <string name="fake_time">00:00</string>
    <string name="available">Available</string>
    <string name="two_hour_plus">2H+</string>
    <string name="available_for">Available for</string>
    <string name="busy_until">Busy until</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="no_name_available">No name available</string>
    <string name="search_for_people">Search for people</string>
    <string name="mobile_booking">Mobile Booking</string>
    <string name="checking">Checking...</string>
    <string name="rooms">Rooms</string>
    <string name="fake_room_name">Bahamas</string>
    <string name="all_rooms">All Rooms</string>
    <string name="first_floor">1st floor</string>
    <string name="fourth_floor">4th floor</string>
    <string name="symbol_between_date_time">•</string>
    <string name="ground_floor">Ground floor</string>
</resources>
