<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_room_booking"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.badoo.meetingroom.presentation.view.activity.RoomBookingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_status_bar"
        android:layout_height="@dimen/status_bar_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/img_badoo_logo"
            android:adjustViewBounds="true"
            android:layout_marginStart="@dimen/status_bar_badoo_logo_margin_left"
            android:paddingTop="@dimen/status_bar_badoo_logo_padding_top"
            android:paddingBottom="@dimen/status_bar_badoo_logo_padding_bottom"
            android:src="@drawable/ic_badoo_logo" />

        <TextView
            android:text="@string/fake_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_current_date_time"
            android:textColor="@color/status_bar_time_text_color"
            android:layout_marginEnd="@dimen/status_bar_time_margin_right"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">

        <TextView
            android:text="@string/fake_room_name"
            android:transitionName="roomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_room_name"
            android:textSize="@dimen/tool_bar_title_text_size"
            android:layout_marginStart="32dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/tool_bar_title_text_color"
            android:layout_gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/checking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_booking_date"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="64dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/no_slots_selected_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_booking_period"
            android:textSize="42sp"
            android:textColor="@android:color/black"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <com.badoo.meetingroom.presentation.view.component.ballpulseloadingview.BallPulseLoadingView
            android:layout_width="wrap_content"
            android:id="@+id/bp_loading_view"
            android:layout_centerInParent="true"
            android:layout_height="@dimen/bp_loading_view_height" />
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_time_slots"
            android:clipToPadding="false"
            android:layout_marginTop="32dp">
        </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tip"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/textLightGray"
        android:text="@string/enter_your_name" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/room_booking_view_margin"
        android:paddingEnd="@dimen/room_booking_view_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.badoo.meetingroom.presentation.view.component.autocompletetextview.MyAutoCompleteTextView
                android:enabled="false"
                android:maxLines="1"
                android:id="@+id/autocomplete_email_address"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:privateImeOptions="nm"
                android:imeOptions="actionDone"
                android:hint="@string/search_for_people" />
        </RelativeLayout>


        <Button
            android:text="@string/book"
            android:background="@drawable/btn_rounded_book"
            android:stateListAnimator="@null"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/btn_book"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
